kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector: 
    matchLabels:
      lbtype: external
  template:
    metadata:
      labels:
        lbtype: external
        app: backend
    spec:
      containers:
        - name: backend
          image: registry.digitalocean.com/remah/be:v22
          resources:
            requests:
              cpu: 50m
          ports:
          - containerPort: 3001
            name: "3001-port"
