kubernetes/full-stack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector: 
    matchLabels:
      lbtype: external
  template:
    metadata:
      labels:
        lbtype: external
        app: backend
    spec:
      containers:
        - name: backend
          image: registry.digitalocean.com/remah/be:v22
          ports:
          - containerPort: 3001
            name: "3001-port"
---
apiVersion: v1
kind: Service
metadata:
  name: external-lb
spec:
  selector:
    lbtype: external
  type: LoadBalancer
  ports:
    - name: backend
      protocol: TCP
      port: 3001
      targetPort: 3001
    - name: frontend
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector: 
    matchLabels:
      lbtype: external
  template:
    metadata:
      labels:
        lbtype: external
        app: frontend
        update-version: "23"
    spec:
      containers:
        - name: frontend
          image: registry.digitalocean.com/remah/be:v22
          ports:
          - containerPort: 4000
            name: "4000-port"
